2007-Nov-25  Heikki Junnila <hjunnila@users.sf.net>
	* Took plugin manager into circles again because plugins need to be
	  configured from some common dialog. Output Manager might get
	  somehow integrated into plugin manager.

2007-Nov-11  Heikki Junnila <hjunnila@users.sf.net>
	* Christopher Staite: Changed usleep() to nanosleep() in
	  FunctionConsumer.
	* Created DMXPatchEditor to DMXMapEditor for individual
	  patch editing (as the primary edit method, context menu
	  being the secondary method).

2007-Nov-08  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed a memory leak in FunctionConsumer's usleep timer code.
	* Added Christopher Staite to AboutBox.

2007-Nov-06  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented RTC & USleep timer methods for FunctionConsumer
	  as suggested by Christopher Staite.

2007-Nov-06  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented saving/loading for DMXMap

2007-Oct-26  Heikki Junnila <hjunnila@users.sf.net>
	* Optimized Monitor so that it reads only the visible range of values.

2007-Oct-26  Heikki Junnila <hjunnila@users.sf.net>
	* FixtureConsole resizes itself a bit taller.

2007-Oct-25  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed VCSliderProperties' slider naming in bus mode: setting a name
	  in bus mode is not possible.

2007-Oct-25  Heikki Junnila <hjunnila@users.sf.net>
	* Changed VCButton to inherit VCWidget
	* Added a function attaching menu item to VCButton's widget menu.
	* Moved the text drawing routine from VCLabel to VCWidget so that
	  everyone can draw their text if they want to.
	* Made a custom paintEvent() handler for VCSlider because it doesn't
	  want to draw text into its background.
	* Moved everything from VCXYPad::init() to its constructor.
	* Fixed renaming for VCWidget to accept also empty strings.
	* Fixed VCSlider::setCaption() to also set the text to the tap button.
	* TODO: VCSliderProperties still behaves in a weird way with buses,