@@ -13,7 +13,7 @@
         </rect>
     </property>
     <property name="caption">
-        <string>DMX Mapper</string>
+        <string>Output Mapper</string>
     </property>
     <vbox>
         <property name="name">
