@@ -1,3 +1,6 @@
+2007-Nov-29  Heikki Junnila <hjunnila@users.sf.net>
+	* Updated plugin manager to act as the access point for dmx mapper.
+
 2007-Nov-25  Heikki Junnila <hjunnila@users.sf.net>
 	* Took plugin manager into circles again because plugins need to be
 	  configured from some common dialog. Output Manager might get
